[project]
name = "mlxhackernews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]
